  establishment (including resolving).
	
* Added new taq CONNECTION_REESTABLISH will enable to change the default 
  behavior and to close/re-open TCP connection.
	
* Tags simplified to support:
   - POST (in future also PUT) for any url;
   - make several subsequest POST-ings;
   - provide a more flexible configuration with multiple-Logins, Logoffs,
     and authentications.

* Tag URLS_NUM, a rename of UAS_URLS_NUM, moved to section
  General. Sections LOGIN and LOGOFF removed, UAS section renamed
  to URL-section
	
  Tag URL_USE_CURRENT will serve to enable POST/PUT on a previous
  url, e.g. obtained by the previous GET/POST/PUT. Thus, old tags 
  <LOGIN/LOGOFF>CYCLING are not in need any more.
	
  Tag URL_DONT_CYCLE will mark a url as not-cycled, which should be 
  fetched only once.
	
  Tag CUSTOM_HEADER renamed to HEADER and moved to the URL-section
  level. Thus, headers of each url could be independently customized.
	
  Tags USERNAME and PASSWORD moved to the URL level to support for
  authentication and/or POST-ing of credentials for every URL.
	
  Tag URL_SHORT_NAME is a newly added tag to provide a short up to 12
  character name to appear in statistics presentation.
	
  Taq REQUEST_TYPE is a rename of LOGIN_REQ_TYPE, but should appear
  with every URL with valid strings "GET", "POST" and "PUT", Worth to mention,
  that "GET" is no more a default and should appear explicitly. Another point is
  that GET+POST to be arranged in 2 separate URL setting of GET with the next
  url with POST and tag URL_USE_CURRENT to re-use the fetched url 
	
  Taq FORM_STRING is a rename of LOGIN_POST_STR, whereas to control the
  type there is a tag FORM_USAGE_TYPE to be defined explicitly.
	
  Tag FORM_RECORDS_FILE is a rename of CREDETIALS_FILE.
	
  Tag UPLOAD_FILE is a newly added tag to support in future method PUT.
	
  New tags WEB_AUTH_METHOD, WEB_AUTH_CREDENTIALS, PROXY_AUTH_METHOD
  and PROXY_AUTH_CREDENTIALS will support explicitly web and proxy authentication.
