@@ -2,7 +2,7 @@
 BATCH_NAME= 10K  
 CLIENTS_NUM_MAX=10000
 CLIENTS_NUM_START=100
-CLIENTS_INITIAL_INC=50
+CLIENTS_RAMPUP_INC=50
 INTERFACE   =eth0    
 NETMASK=16  
 IP_ADDR_MIN= 192.168.1.1
