@@ -1,7 +1,7 @@
 ########### GENERAL SECTION ################################
 BATCH_NAME=bax 
 CLIENTS_NUM_MAX= 5
-#CLIENTS_INITIAL_INC=1
+#CLIENTS_RAMPUP_INC=1
 INTERFACE=eth0    
 NETMASK=24  
 IP_ADDR_MIN=194.90.71.214
