@@ -3,7 +3,7 @@
 BATCH_NAME= big-load  
 CLIENTS_NUM_MAX=10000 #Same as CLIENTS_NUM
 CLIENTS_NUM_START=500
-CLIENTS_INITIAL_INC=50
+CLIENTS_RAMPUP_INC=50
 INTERFACE   =eth0    
 NETMASK=16  
 IP_ADDR_MIN= 192.168.1.1
