@@ -1,7 +1,7 @@
 ########### GENERAL SECTION ################################
 BATCH_NAME= init_caps 
 CLIENTS_NUM=20
-CLIENTS_INITIAL_INC=3
+CLIENTS_RAMPUP_INC=3
 INTERFACE   =eth0    
 NETMASK=255.255.240.0 
 IP_ADDR_MIN= 192.168.1.1
